examples/hello-world-ingress/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: ngrok
  rules:
  - host: SET-VIA-config.yaml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-echo-svc
            port:
              number: 80
      - path: /bezek
        pathType: Prefix
        backend:
          service:
            name: http-echo-svc
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deploy
spec:
  selector:
    matchLabels:
      app: http-echo-app
  replicas: 2
  template:
    metadata:
      labels:
        app: http-echo-app
    spec:
      containers:
      - name: http-echo-path2
        image: mendhak/http-https-echo:24
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-svc
  labels:
    app: http-echo-app
spec:
  ports:
  - name: http-echo-app
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo-app
